🗿🚦🛵 Fix the chart layout and spiral clipping mask control points

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,10 @@ h1 {
   margin: 32px;
 }
 
+svg {
+  overflow: visible;
+}
+
 /* set both chart containers properties */
 /* D3 version */
 #chart,
